k8s/staging/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kongapay-international
  labels:
    app: kongapay-international
spec:
  selector:
    matchLabels:
      app: kongapay-international
  template:
    metadata:
      labels:
        app: kongapay-international
    spec:
      nodeSelector:
        kubernetes.azure.com/agentpool: default
      containers:
      - image: acrkongapayshared.azurecr.io/kongapay-international-staging:latest
        name: kongapay-international
        ports:
        - containerPort: 80
          protocol: TCP
          name: http
