k8s/staging/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kongapay-international
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
    - port: 8090
      protocol: TCP
      name: http2
  selector:
    app: kongapay-international
